fix navbar stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,11 @@ h3 {
 }
 
 nav {
-  display: grid;
+  /* display: grid;
+  align-items: center; */
+
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -52,6 +56,7 @@ nav a {
   text-decoration: none;
   color: pink;
   font-size: 1.5rem;
+  padding: 2rem;
 }
 
 header,
